# Test-Task-Infotecs

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
Client/: CMakeLists.txt
Client_App1/: CMakeLists.txt  main.cpp
Client_App1/src/: BufferProcessor.cpp  BufferProcessor.hpp
Program_1/: CMakeLists.txt  main.cpp
Program_1/src/: BufferProcessor.cpp  BufferProcessor.hpp  DataProcessor.cpp  DataProcessor.hpp  NetworkManager.cpp  NetworkManager.hpp  StatusCodes.hpp
Program_2/: CMakeLists.txt  main.cpp
Program_2/src/: DataProcessor.cpp  DataProcessor.hpp  DataReceiver.cpp  DataReceiver.hpp
